src/objects/smagicinteract__Action__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Action_To_Perform__c</fullName>
        <label>Action To Perform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ConvertLead</fullName>
                </value>
                <value>
                    <fullName>OpenUrl</fullName>
                </value>
                <value>
                    <fullName>Post To Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automated</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>